Let's just say it fixes most problems and leave it at that...